RESOLVED FIXED165992
[Cocoa] REGRESSION (r209558): Calling decisionHandler multiple times in webView:decidePolicyForNavigationAction:decisionHandler: leads to a crash
https://bugs.webkit.org/show_bug.cgi?id=165992
Summary [Cocoa] REGRESSION (r209558): Calling decisionHandler multiple times in webVi...
Andy Estes
Reported 2016-12-16 23:46:54 PST
[Cocoa] REGRESSION (r209558): Calling decisionHandler multiple times in webView:decidePolicyForNavigationAction:decisionHandler: leads to a crash
Attachments
Patch (28.93 KB, patch)
2016-12-17 00:13 PST, Andy Estes
no flags
Patch (28.91 KB, patch)
2016-12-17 00:18 PST, Andy Estes
no flags
Andy Estes
Comment 1 2016-12-16 23:47:44 PST
Andy Estes
Comment 2 2016-12-17 00:13:53 PST
Andy Estes
Comment 3 2016-12-17 00:18:55 PST
WebKit Commit Bot
Comment 4 2016-12-17 00:21:44 PST
Attachment 297398 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/Cocoa/CompletionHandlerCallChecker.mm:34: Bad include order. Mixing system and custom headers. [build/include_order] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 5 2016-12-20 13:19:11 PST
Comment on attachment 297398 [details] Patch Clearing flags on attachment: 297398 Committed r210031: <http://trac.webkit.org/changeset/210031>
WebKit Commit Bot
Comment 6 2016-12-20 13:19:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.